kubernetes/delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
spec:
  replicas: 4
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: delivery
                topologyKey: kubernetes.io/hostname
      containers:
        - name: delivery
          image: alpinemeadow/delivery:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: delivery
spec:
  selector:
    app: delivery
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
